Fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
 }
 .container {
   width: 960px;
-  height: 960px;
+  height: 1010px;
   background: #4199d3;
 }
 
